bk_ida/gccida/c0/c_expand_body
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_expand_body/src/c-decl.c:7493:15: error: use of undeclared identifier 'TV_INTEGRATION_0'; did you mean 'TV_INTEGRATION'?
timevar_push( TV_INTEGRATION_0); 
              ^~~~~~~~~~~~~~~~
              TV_INTEGRATION
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_expand_body/src/timevar.def:55:13: note: 'TV_INTEGRATION' declared here
DEFTIMEVAR (TV_INTEGRATION           , "integration")
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_expand_body/src/c-decl.c:7499:14: error: use of undeclared identifier 'TV_INTEGRATION_0'; did you mean 'TV_INTEGRATION'?
timevar_pop( TV_INTEGRATION_0); 
             ^~~~~~~~~~~~~~~~
             TV_INTEGRATION
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_expand_body/src/timevar.def:55:13: note: 'TV_INTEGRATION' declared here
DEFTIMEVAR (TV_INTEGRATION           , "integration")
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_expand_body/src/c-decl.c:7503:14: error: use of undeclared identifier 'TV_INTEGRATION_0'; did you mean 'TV_INTEGRATION'?
timevar_pop( TV_INTEGRATION_0); 
             ^~~~~~~~~~~~~~~~
             TV_INTEGRATION
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_expand_body/src/timevar.def:55:13: note: 'TV_INTEGRATION' declared here
DEFTIMEVAR (TV_INTEGRATION           , "integration")
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_expand_body/src/c-decl.c:7505:15: error: use of undeclared identifier 'TV_EXPAND_0'; did you mean 'TV_EXPAND'?
timevar_push( TV_EXPAND_0); 
              ^~~~~~~~~~~
              TV_EXPAND
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_expand_body/src/timevar.def:53:13: note: 'TV_EXPAND' declared here
DEFTIMEVAR (TV_EXPAND                , "expand")
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_expand_body/src/c-decl.c:7520:38: error: expected expression
if ( fndecl->decl.name && *( _OWORD *)&fndecl->block.fragment_chain == *( &global_trees + 50) ) 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_expand_body/src/c-decl.c:7520:30: error: use of undeclared identifier '_OWORD'
if ( fndecl->decl.name && *( _OWORD *)&fndecl->block.fragment_chain == *( &global_trees + 50) ) 
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_expand_body/src/c-decl.c:7599:14: error: use of undeclared identifier 'TV_EXPAND_0'; did you mean 'TV_EXPAND'?
timevar_pop( TV_EXPAND_0); 
             ^~~~~~~~~~~
             TV_EXPAND
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_expand_body/src/timevar.def:53:13: note: 'TV_EXPAND' declared here
DEFTIMEVAR (TV_EXPAND                , "expand")
            ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_expand_body/src/obj/c-decl.o] Error 1
